# itsol_mod

./: CMakeLists.txt
include/: data-types.h  pc-iluk.h  pc-ilutc.h  pc-ilutpc.h
src/: itsol.c  pc-arms2.c  pc-iluk.c  pc-ilutc.c  pc-ilutpc.c  utils.c
